rust/crates/foundation/parameter-nih-plug/tests/integration/ui/missing_nested_group.stderr
error: missing `group = "..."` in #[nih_plugin_nested(...)]
  --> tests/integration/ui/missing_nested_group.rs:13:5
   |
13 |     #[nih_plugin_nested()]
   |     ^^^^^^^^^^^^^^^^^^^^^^
